--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 /* Overall container - lighter background */
 .fc {
-    background-color: #fafafa; /* Very light gray - much softer */
+    background-color: #fcfcfc; /* Very light gray - much softer */
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 13px;
     border: 1px solid #e0e0e0; /* Softer border */
